add workspace {key, description} to all readable views.
Add description to workspace auth.  Remove previous workspace
association of ruleform when placing it in a new workspace.

--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency.xml
@@ -9,6 +9,8 @@
         <createView viewName="agency" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                  r.id, 
 			     r.name, 
 			     r.description,
