--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_location_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_location_authorization.xml
@@ -8,6 +8,8 @@
     <changeSet id="2.0.0" author="hparry">
         <createView viewName="agency_location_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
             SELECT w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                 auth.id,
                 f_r.name as from_relationship,
                 f_p.name as from_parent,
