--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_product.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_product.xml
@@ -9,6 +9,8 @@
         <createView viewName="agency_product" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT  
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                 bl.id, 
                     res.name AS agency, 
                     rel.name AS relationship, 
