--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/location_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/location_attribute.xml
@@ -9,6 +9,8 @@
         <createView viewName="location_attribute" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                  la.id, 
                     l.name AS location, 
                     a.name AS attribute,
