--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product.xml
@@ -7,7 +7,15 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="product" replaceIfExists="true"><![CDATA[
-			 SELECT w.name AS workspace, b.id, b.name, b.description, b.notes, up.name AS updated_by, b.version
+			 SELECT 
+                w.name AS workspace, 
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
+                b.id, 
+                b.name, 
+                b.description, 
+                b.notes, up.name AS updated_by, 
+                b.version
 			   FROM product b
 			   JOIN agency up ON b.updated_by = up.id
              LEFT JOIN ruleform.workspace_authorization wa ON b.workspace = wa.id
