--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/relationship_network_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/relationship_network_authorization.xml
@@ -9,6 +9,8 @@
         <createView schemaName="readable" viewName="relationship_network_authorization" replaceIfExists="true"><![CDATA[ 
             SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                 auth.id,
                 classifier.name as classifier,
                 classification.name as classification,
