--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/workspace_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/workspace_authorization.xml
@@ -11,6 +11,7 @@
                  b.id, 
 			     dp.name AS defining_product, 
                  b.key, 
+                 b.description, 
 			     b.reference,
                  b.type,
 			     b.notes, 
