--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_interval_grouping.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_interval_grouping.xml
@@ -9,6 +9,8 @@
         <createView viewName="agency_interval_grouping" schemaName="readable" replaceIfExists="true"><![CDATA[
              SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                 base_table.id,
                 entity.name AS entity,
                 auth.name AS grouping_agency,
