--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/attribute.xml
@@ -9,6 +9,8 @@
         <createView viewName="attribute" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                  a.id, 
 			     a.name, 
 			     a.description, 
