--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/attribute_meta_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/attribute_meta_attribute.xml
@@ -9,6 +9,8 @@
         <createView viewName="attribute_meta_attribute" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                  aa.id, 
 			     ba.name AS base_attribute, 
 			     a.name AS attribute, 
