--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/interval.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/interval.xml
@@ -7,7 +7,16 @@
 
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="interval"><![CDATA[ 
-			 SELECT w.name AS workspace, r.id, r.name, r.description, r.notes, up.name AS updated_by, r.version
+			 SELECT 
+                w.name AS workspace, 
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
+                r.id, 
+                r.name, 
+                r.description, 
+                r.notes, 
+                up.name AS updated_by, 
+                r.version
 			   FROM interval r
 			   JOIN interval up ON r.updated_by = up.id
              LEFT JOIN ruleform.workspace_authorization wa ON r.workspace = wa.id
