--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/interval_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/interval_attribute.xml
@@ -9,6 +9,8 @@
         <createView viewName="interval_attribute" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                  ra.id, 
                     r.name AS interval, 
                     a.name AS attribute, 
