--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product_relationship.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product_relationship.xml
@@ -7,7 +7,17 @@
 
     <changeSet id="2.0.0" author="hparry">
         <createView viewName="product_relationship" schemaName="readable" replaceIfExists="true"><![CDATA[
-			 SELECT w.name AS workspace, bl.id, b.name AS product, rel.name AS relationship, l.name AS child, bl.notes, up.name AS updated_by, bl.version
+			 SELECT 
+                w.name AS workspace, 
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
+                bl.id, 
+                b.name AS product, 
+                rel.name AS relationship, 
+                l.name AS child, 
+                bl.notes, 
+                up.name AS updated_by, 
+                bl.version
 			   FROM product_relationship bl
 			   JOIN product b ON bl.product = b.id
 			   JOIN relationship rel ON bl.relationship = rel.id
