--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/protocol.xml
@@ -9,6 +9,8 @@
         <createView schemaName="readable" viewName="protocol" replaceIfExists="true"><![CDATA[
              SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                 base_table.id,
                 base_table.name,
                 s.name AS service,
