--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/relationship_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/relationship_attribute.xml
@@ -9,6 +9,8 @@
         <createView schemaName="readable" viewName="relationship_attribute" replaceIfExists="true"><![CDATA[
 			 SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                 ra.id, 
                     r.name AS relationship, 
                     a.name AS attribute, 
