--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/unit.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/unit.xml
@@ -9,6 +9,8 @@
         <createView schemaName="readable" viewName="unit" replaceIfExists="true"><![CDATA[ 
 			 SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                  b.id, 
 			     b.name, 
                  b.description, 
