--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/unit_network_attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/unit_network_attribute.xml
@@ -9,6 +9,8 @@
         <createView viewName="unit_network_attribute" schemaName="readable" replaceIfExists="true"><![CDATA[
 			 SELECT 
                 w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
                  ba.id, 
                     b.id AS network_rule, 
                     a.name AS attribute, 
