--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_existential_grouping.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/agency_existential_grouping.xml
@@ -6,23 +6,24 @@
 >
 
     <changeSet id="2.0.0" author="hhildebrand">
-        <createView viewName="agency_product_grouping" schemaName="readable" replaceIfExists="true"><![CDATA[
+        <createView viewName="agency_existential_grouping" schemaName="readable" replaceIfExists="true"><![CDATA[
              SELECT 
                 w.name AS workspace,
                 wa.key AS wsp_key,
                 wa.description AS wsp_desc,
                 base_table.id,
+                auth.name AS authority,
                 entity.name AS entity,
-                auth.name AS grouping_agency,
+                entity.domain AS domain,
                 base_table.notes, 
                 up.name AS updated_by, 
                 base_table.version
-             FROM agency_product_grouping base_table
-               JOIN product entity ON base_table.entity = entity.id
-               JOIN agency auth ON base_table.grouping_agency = auth.id 
-               JOIN agency up ON base_table.updated_by = up.id
-               LEFT JOIN ruleform.workspace_authorization wa ON base_table.workspace = wa.id
-               LEFT JOIN ruleform.product w ON wa.defining_product = w.id
+             FROM agency_existential_grouping base_table
+               JOIN existential entity ON base_table.entity = entity.id
+               JOIN existential auth ON base_table.authority = auth.id 
+               JOIN existential up ON base_table.updated_by = up.id
+               LEFT JOIN workspace_authorization wa ON base_table.workspace = wa.id
+               LEFT JOIN existential w ON wa.defining_product = w.id
             ]]>
         </createView>
     </changeSet>
