--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/attribute.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/attribute.xml
@@ -15,14 +15,14 @@
 			     a.name, 
 			     a.description, 
 			     a.notes, 
-			     a.inheritable, 
 			     a.value_type, 
 			     up.name AS updated_by, 
 			     a.version
-			   FROM attribute a
-			   JOIN agency up ON a.updated_by = up.id
-             LEFT JOIN ruleform.workspace_authorization wa ON a.workspace = wa.id
-             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
+			   FROM existential a
+			   JOIN existential up ON a.updated_by = up.id
+             LEFT JOIN workspace_authorization wa ON a.workspace = wa.id
+             LEFT JOIN existential w ON wa.defining_product = w.id
+               WHERE a.domain = 'Attribute'
             ]]>
         </createView>
     </changeSet>
