--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/relationship.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/relationship.xml
@@ -17,11 +17,12 @@
                 inv.name AS inverse, 
                 rel.notes, 
                 up.name AS updated_by
-			   FROM relationship rel
-			   JOIN relationship inv ON rel.inverse = inv.id
-			   JOIN agency up ON rel.updated_by = up.id
-             LEFT JOIN ruleform.workspace_authorization wa ON rel.workspace = wa.id
-             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
+			   FROM existential rel
+			   JOIN existential inv ON rel.inverse = inv.id
+			   JOIN existential up ON rel.updated_by = up.id
+             LEFT JOIN workspace_authorization wa ON rel.workspace = wa.id
+             LEFT JOIN existential w ON wa.defining_product = w.id
+               WHERE rel.domain = 'Relationship'
             ]]>
         </createView>
     </changeSet>
