--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/interval.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/interval.xml
@@ -17,10 +17,11 @@
                 r.notes, 
                 up.name AS updated_by, 
                 r.version
-			   FROM interval r
-			   JOIN interval up ON r.updated_by = up.id
-             LEFT JOIN ruleform.workspace_authorization wa ON r.workspace = wa.id
-             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
+			   FROM existential r
+			   JOIN existential up ON r.updated_by = up.id
+             LEFT JOIN existential w ON r.workspace = w.id
+             LEFT JOIN workspace_authorization wa ON wa.defining_product = wa.id
+               WHERE r.domain = 'Interval'
             ]]>
         </createView>
     </changeSet>
