--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
@@ -26,17 +26,17 @@
                     up.name AS updated_by, base_table.version,
                     base_table.protocol
                FROM job base_table
-               JOIN product s ON base_table.service = s.id
-               JOIN product p ON base_table.product = p.id
-               JOIN agency at ON base_table.assign_to = at.id
-               JOIN agency r ON base_table.requester = r.id
-               JOIN location dt ON base_table.deliver_to = dt.id
-               JOIN location df ON base_table.deliver_from = df.id
-               JOIN status_code sc ON base_table.status = sc.id
-               JOIN agency up ON base_table.updated_by = up.id
-               JOIN unit u ON base_table.quantity_unit = u.id
-             LEFT JOIN ruleform.workspace_authorization wa ON base_table.workspace = wa.id
-             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
+               JOIN existential s ON base_table.service = s.id
+               JOIN existential p ON base_table.product = p.id
+               JOIN existential at ON base_table.assign_to = at.id
+               JOIN existential r ON base_table.requester = r.id
+               JOIN existential dt ON base_table.deliver_to = dt.id
+               JOIN existential df ON base_table.deliver_from = df.id
+               JOIN existential sc ON base_table.status = sc.id
+               JOIN existential up ON base_table.updated_by = up.id
+               JOIN existential u ON base_table.quantity_unit = u.id
+             LEFT JOIN workspace_authorization wa ON base_table.workspace = wa.id
+             LEFT JOIN existential w ON wa.defining_product = w.id
             ]]></createView>
     </changeSet>
 </databaseChangeLog>
