--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/product.xml
@@ -16,10 +16,11 @@
                 b.description, 
                 b.notes, up.name AS updated_by, 
                 b.version
-			   FROM product b
-			   JOIN agency up ON b.updated_by = up.id
-             LEFT JOIN ruleform.workspace_authorization wa ON b.workspace = wa.id
-             LEFT JOIN ruleform.product w ON wa.defining_product = w.id
+			   FROM existential b
+			   JOIN existential up ON b.updated_by = up.id
+             LEFT JOIN workspace_authorization wa ON b.workspace = wa.id
+             LEFT JOIN existential w ON wa.defining_product = w.id
+               WHERE b.domain = 'Product'
             ]]>
         </createView>
     </changeSet>
