--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/meta_protocol.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/meta_protocol.xml
@@ -14,6 +14,7 @@
                  base_table.id, 
                         s.name AS service,  
                         st.name AS service_type, 
+                        status.name AS status, 
                         u.name AS quantity_unit,
                         po.name AS product,
                         at.name AS assign_to,
@@ -28,6 +29,7 @@
                    JOIN existential s ON base_table.service = s.id
                    LEFT JOIN existential rr ON base_table.requester = rr.id
                    LEFT JOIN existential st ON base_table.service_type = st.id
+                   LEFT JOIN existential status ON base_table.status = status.id
                    LEFT JOIN existential po ON base_table.product = po.id
                    LEFT JOIN existential dt ON base_table.deliver_to= dt.id
                    LEFT JOIN existential df ON base_table.deliver_from = df.id 
