--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
@@ -23,8 +23,7 @@
                     u.name AS quantity_unit,
                     base_table.notes,
                     up.name AS updated_by, base_table.version,
-                    base_table.parent,
-                    base_table.protocol
+                    base_table.parent
                FROM job base_table
                JOIN existential s ON base_table.service = s.id
                JOIN existential p ON base_table.product = p.id
