--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/job.xml
@@ -8,10 +8,7 @@
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="job"><![CDATA[
              SELECT 
-                w.name AS workspace,
-                wa.key AS wsp_key,
-                wa.description AS wsp_desc,
-                 base_table.id, 
+                    base_table.id, 
                     s.name AS service,  
                     sc.name AS status, 
                     p.name AS product,  
@@ -22,8 +19,12 @@
                     base_table.quantity,
                     u.name AS quantity_unit,
                     base_table.notes,
-                    up.name AS updated_by, base_table.version,
-                    base_table.parent
+                    base_table.parent,
+                    up.name AS updated_by, 
+                    w.name AS workspace,
+                    wa.key AS wsp_key,
+                    wa.description AS wsp_desc,
+                    base_table.version
                FROM job base_table
                JOIN existential s ON base_table.service = s.id
                JOIN existential p ON base_table.product = p.id
