--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/relationship.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/relationship.xml
@@ -8,15 +8,16 @@
     <changeSet id="2.0.0" author="hhildebrand">
         <createView schemaName="readable" viewName="relationship" replaceIfExists="true"><![CDATA[  
 			 SELECT 
-                w.name AS workspace, 
-                wa.key AS wsp_key,
-                wa.description AS wsp_desc,
                 rel.id, 
                 rel.name, 
                 rel.description, 
                 inv.name AS inverse, 
                 rel.notes, 
-                up.name AS updated_by
+                up.name AS updated_by,
+                w.name AS workspace, 
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc,
+                rel.version
 			   FROM existential rel
 			   JOIN existential inv ON rel.inverse = inv.id
 			   JOIN existential up ON rel.updated_by = up.id
