--- a/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/existential_network_authorization.xml
+++ b/schema/src/main/resources/com/chiralbehaviors/CoRE/schema/readable/views/existential_network_authorization.xml
@@ -8,9 +8,6 @@
     <changeSet id="2.0.0" author="hparry">
         <createView viewName="existential_network_authorization" schemaName="readable" replaceIfExists="true"><![CDATA[
             SELECT  
-                w.name AS workspace,
-                wa.key AS wsp_key,
-                wa.description AS wsp_desc,
                 auth.id, 
                 auth.name,
                 classifier.name as classifier,
@@ -20,7 +17,10 @@
                 authorized_parent.name as child_classification,
                 classification.domain as classification_domain,
                 authorized_parent.domain as child_classification_domain,
-                res.name as authority
+                res.name as authority,
+                w.name AS workspace,
+                wa.key AS wsp_key,
+                wa.description AS wsp_desc
                 
                 from existential_network_authorization auth
                 join facet parent on auth.parent = parent.id
